# mcp-syllabus-example

./: .dockerignore  .env.example  .gitignore  DISTRIBUTED_IMPLEMENTATION_PLAN.md  DOCKER_DEPLOYMENT.md  LECTURE_PLAN.md  PARALLEL_EXECUTION.md  README.md  WARP.md  docker-compose.yml  pyproject.toml  test_syllabus_service.py  verbose.out
academic_planner/: models.py  server.py
docs/: PROMPT_TEMPLATE.md  QA_TOOLS.md
mcp_gateway/: Dockerfile  server.py
mcp_wrappers/: __init__.py
mcp_wrappers/academic_planner/: __init__.py  mcp_service.py
mcp_wrappers/productivity/: __init__.py  mcp_service.py
mcp_wrappers/syllabus/: __init__.py  mcp_service.py
orchestrator/: executor.py  models.py  run.py  run_agent.py  run_llm.py  shared.py  utils.py
productivity_server/: models.py  server.py  store.py
prompts/: __init__.py  academic_planner_system_prompt.txt  orchestrator_system_prompt.txt  syllabus_parser_system_prompt.txt
registry/: __init__.py
services/academic_planner_service/: Dockerfile  app.py
services/productivity_service/: Dockerfile  app.py
services/shared/: __init__.py  models.py
services/syllabus_service/: Dockerfile  app.py  mock_app.py
syllabus_server/: models.py  pdf_utils.py  server.py
tests/: test_executor.py  test_parse_syllabus.py  test_pdf_extract.py
