[project]
name = "syllabusmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "mcp[cli]>=1.21.0",
    "fastmcp==2.13.1",
    "openai>=2.7.1",
    "pdfplumber>=0.11.8",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["syllabus_server", "productivity_server", "orchestrator"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
